cmake_minimum_required(VERSION 3.24)
project(project3)

set(CMAKE_CXX_STANDARD 17)

add_executable(project3 basic_oop/main.cpp basic_oop/dtime.h basic_oop/dtime.cpp basic_oop/employee.h basic_oop/emloyee.cpp basic_oop/hourlyemployee.h basic_oop/hourlyemployee.cpp basic_oop/salariedemployee.h basic_oop/salariedemployee.cpp basic_oop/main2.cpp pfarray/PFArrayD.h pfarray/PFArrayD.cpp pfarray/PFArrayDBak.h pfarray/PFArrayDBak.cpp pfarray/main3.cpp PolyVrtFunct/Sale.h PolyVrtFunct/main4.cpp PolyVrtFunct/Sale.cpp PolyVrtFunct/DiscountSale.h PolyVrtFunct/DiscountSale.cpp poinersAndVF/main5.cpp templates/PFArray.h templates/PFArray.cpp templates/PFArrayBak.h templates/PFArrayBak.cpp templates/main6.cpp templates/main6.cpp)
